<resources>
    <string name="app_name">TechShop</string>
    <string name="release_date">Exp. release 2022, February</string>
    <string name="weight">228g/229g , 8.9 thickness</string>
    <string name="software">Android 12, One UI 4.1</string>
    <string name="spec">128GB/256GB/1TB etc...</string>
    <string name="more">More Detail</string>
    <string name="name">Samsung Galaxy S22 Ultra</string>
    <string name="add_item">Add New Device</string>
    <string name="item_name_input">Device Name</string>
    <string name="item_weight_input">Device Weight</string>
    <string name="item_os_input">Device Software</string>
    <string name="item_release_input">Device Release</string>
    <string name="item_add_confirm">Confirm</string>
    <string name="item_remove_title">You sure, you want to remove this item?</string>
    <string name="item_remove_cancel">NO</string>
    <string name="item_remove_accept">YES</string>
    <string name="update_item">Update Device</string>
</resources>