<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="164dp"
    android:padding="32dp"
    >

    <TextView
        android:id="@+id/removeItemAlertTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_remove_title"
        android:textSize="17sp"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/removeItemCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_remove_cancel"
        android:textSize="15sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/removeItemAlertTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/removeItemAccept"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/removeItemAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_remove_accept"
        android:textSize="15sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/removeItemAlertTitle"
        app:layout_constraintStart_toEndOf="@id/removeItemCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>