<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="256dp"
    android:padding="8dp"
    android:layout_margin="12dp"
    >

    <ImageView
        android:id="@+id/itemImageView"
        android:layout_width="164dp"
        android:layout_height="match_parent"
        android:src="@drawable/img_s22"
        android:contentDescription="Empty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="17sp"
        android:textColor="?attr/colorOnSecondary"
        android:fontFamily="@font/product_sans_bold"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/itemImageView"
        app:layout_constraintBottom_toTopOf="@+id/itemWeight"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/itemWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textSize="15sp"
        android:textColor="?attr/colorOnSecondary"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/itemName"
        app:layout_constraintStart_toStartOf="@+id/itemName"
        app:layout_constraintBottom_toTopOf="@+id/itemOs"
        />

    <TextView
        android:id="@+id/itemOs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/software"
        android:textSize="15sp"
        android:textColor="?attr/colorOnSecondary"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/itemWeight"
        app:layout_constraintTop_toBottomOf="@+id/itemWeight"
        app:layout_constraintBottom_toTopOf="@+id/itemReleaseDate"
        />

    <TextView
        android:id="@+id/itemReleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release_date"
        android:textSize="15sp"
        android:textColor="?attr/colorOnSecondary"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/itemOs"
        app:layout_constraintStart_toStartOf="@+id/itemOs"
        app:layout_constraintBottom_toTopOf="@+id/itemDetailButton"
        />

    <Button
        android:id="@+id/itemDetailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="@+id/itemReleaseDate"
        app:layout_constraintTop_toBottomOf="@+id/itemReleaseDate"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ImageView
        android:id="@+id/heartIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_heart"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/itemDetailButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemReleaseDate"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>